# compactbench

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  smoke.bat
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  method_submission.md  template_proposal.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  evaluate-submission.yml  release.yml  update-leaderboard.yml
benchmarks/public/elite_practice/: buried_constraint_v1_1.yaml  buried_constraint_v1_2.yaml  buried_constraint_v1_3.yaml  buried_constraint_v1_4.yaml  buried_constraint_v1_5.yaml  decision_override_v1_1.yaml  decision_override_v1_2.yaml  decision_override_v1_3.yaml  decision_override_v1_4.yaml  decision_override_v1_5.yaml  entity_confusion_v1_1.yaml  entity_confusion_v1_2.yaml  entity_confusion_v1_3.yaml  entity_confusion_v1_4.yaml  entity_confusion_v1_5.yaml  reference_resolution_v1_1.yaml  reference_resolution_v1_2.yaml  reference_resolution_v1_3.yaml  reference_resolution_v1_4.yaml  reference_resolution_v1_5.yaml
benchmarks/public/starter/: buried_constraint_starter_v1.yaml  decision_override_starter_v1.yaml  entity_confusion_starter_v1.yaml  reference_resolution_starter_v1.yaml
benchmarks/schemas/: template-v1.json
docs/: elite-program.md  faq.md  getting-started.md  index.md  integrations.md  leaderboard.md  methodology.md  submitting.md  writing-a-compactor.md
docs/architecture/: decisions.md  workorders.md
docs/architecture/_legacy-saas/: 01_architecture_overview.md  02_repo_structure.md  03_database_schema.md  04_api_endpoints.md  05_page_map.md  06_service_responsibilities.md  07_elite_benchmark_program.md  08_workorders_bootstrap_to_launch.md  README.md  decisions.md
docs/data/: leaderboard.json
docs/governance/: elite-versions.md
docs/launch/: ai-twitter.md  hacker-news.md  r-localllama.md
notebooks/: try_compactbench.ipynb
scripts/: build_notebook.py  rebuild_leaderboard.py  smoke.ps1  smoke_notebook.py  validate_submissions.py
site/: 404.html  index.html  sitemap.xml
site/architecture/decisions/: index.html
site/architecture/workorders/: index.html
site/elite-program/: index.html
site/getting-started/: index.html
site/methodology/: index.html
site/search/: search_index.json
site/submitting/: index.html
site/writing-a-compactor/: index.html
src/compactbench/: __init__.py  __main__.py  cli.py  config.py
src/compactbench/compactors/: __init__.py  _state_parser.py  _utils.py  base.py  errors.py  hierarchical_summary.py  (+3 more)
submissions/: README.md
submissions/_template/: README.md  config.yaml  method.py  requirements.txt
tests/: conftest.py
tests/unit/: test_cli_score.py  test_compactors_base.py  test_compactors_hierarchical_summary.py  test_compactors_hybrid_ledger.py  test_compactors_naive_summary.py  test_compactors_state_parser.py  test_compactors_structured_state.py  test_compactors_utils.py  test_config.py  test_contracts.py  test_contracts_token_usage.py  test_dsl_generators.py  test_dsl_parser.py  test_dsl_substitution.py  test_dsl_validator.py  test_elite_practice_suite.py  test_engine_distractors.py  test_engine_generation.py  test_engine_seeds.py  test_integrations_langchain.py  test_integrations_llamaindex.py  test_leaderboard_projection.py  test_leaderboard_qualification.py  test_leaderboard_ranking.py  test_providers_anthropic.py  test_providers_contract.py  test_providers_counting.py  test_providers_google_ai_studio.py  test_providers_groq.py  test_providers_mock.py  test_providers_ollama.py  test_providers_openai.py  test_providers_retry.py  test_runner_continuation.py  test_runner_cycle.py  test_runner_estimate.py  test_runner_evaluation.py  test_runner_persistence.py  test_runner_resolver.py  test_runner_run.py  (+7 more)
(+60 files in other folders)
