[project]
name = "compactbench"
version = "0.1.0"
description = "Open benchmark for AI conversation compaction methods"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "CompactBench contributors" }]
keywords = [
    "ai",
    "llm",
    "benchmark",
    "evaluation",
    "context",
    "compaction",
    "memory",
    "drift",
    "summarization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ruamel.yaml>=0.18",
    "jsonschema>=4.22",
    "tiktoken>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
providers = [
    "groq>=0.9",
    "google-genai>=0.3",
    "ollama>=0.3",
]
langchain = [
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "pyright>=1.1.370",
    "pre-commit>=3.7",
    "langchain-core>=0.3",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.2",
]

[project.scripts]
compactbench = "compactbench.cli:app"

[project.urls]
Homepage = "https://compactbench.github.io/compactbench"
Repository = "https://github.com/compactbench/compactbench"
Documentation = "https://compactbench.github.io/compactbench"
Issues = "https://github.com/compactbench/compactbench/issues"
Changelog = "https://github.com/compactbench/compactbench/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compactbench"]

[tool.hatch.build.targets.sdist]
include = [
    "src/compactbench",
    "benchmarks/public",
    "benchmarks/schemas",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "pyright>=1.1.370",
    "pre-commit>=3.7",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.2",
    "langchain-core>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
    "PT",
]
ignore = [
    "E501",
    "B008",  # Typer uses callables in argument defaults by design
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that require external services",
    "slow: tests taking more than ~1s",
]

[tool.coverage.run]
source = ["src/compactbench"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedImport = "warning"

[[tool.pyright.executionEnvironments]]
# Tests use pytest fixtures and pytest.approx whose stubs are incomplete.
# Keep src/ strict; relax Unknown checks on tests/.
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
